changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

socket/info.c: Fix stack smashing in magic_mapping_mark() on maps wider than 50
  tiles.
Arvid Norlander 2009-01-24

test/unit/common/check_item.c: Fix failing regression test.
Andreas Kirschbaum 2009-01-24

plugins/common/hashtable.c: Rewrite the code documentation to doxygen style.
Arvid Norlander 2009-01-23

plugins/cflogger/cflogger.c: Make non-direct kills (kill by spell, kill by
  poison, kill by golem and so on) register properly.
Arvid Norlander 2009-01-23

plugins/cflogger/cflogger.c: Slight error in last commit, turns out time table
  can't use real time as primary key. Change database schema to format 3.
  Upgrades directly from version 1 not run into the issue.
Arvid Norlander 2009-01-23

plugins/cflogger/cflogger.c: Clean out some of the messy and broken SQL (didn't
  use indexes, was missing important constraints and so on) in cflogger. This
  includes introducing a new version of the SQL schema used. The database will
  be automatically upgraded at next run. Be aware of that older versions were
  missing a check for too new format, thus once you upgraded the format you
  should not run it with an older version of the server. Changes to the schema
  includes adding some indexes and similar.
Arvid Norlander 2009-01-22

plugins/cflogger/cflogger.c, plugins/cfnewspaper/cfnewspaper.c: Now handles
  random maps the way the source code comments claims it does.
plugins/cfnewspaper/cfnewspaper.c: Make info about kills from a specific region
  work.
Arvid Norlander 2009-01-22

common/object.c: Add missing newline to log message that is shown if